# BBombsBot

./: README.md  pyproject.toml
src/: __main__.py
src/extensions/: admin.py  errorhandler.py  misc.py  moderation.py
src/models/: __init__.py  automod.py  bot.py  context.py  database.py  database_member.py  errors.py  moderator.py  plugin.py  ratelimiter.py  safebrowsing.py  views.py
src/sql/: schema.sql
src/static/: const.py  re.py
src/static/lists/: domain_blacklist.txt  domain_whitelist.txt
src/utils/: helpers.py
