[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D2",
    "D3",
    "D4",
    "Q",
    "SIM",
    "RUF",
    "ERA",
    "RSE",
    "ASYNC"
]
fixable = ["F","I","D","T20","ERA","RUF"]
ignore = ["F403","D213","D203","F405"]

[tool.ruff.lint.per-file-ignores]
"errors.py" = ["E501"]
"errorhandler.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "bbombsbot"
version = "2.4.2"
description = "Experimental Discord bot written in Python with Hikari."
authors = [{name = "BBombs"}]
license = "GNU GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hikari = "2.1.0"
hikari-lightbulb = "~=2.3.5"
asyncpg = "~=0.29.0"
psutil = "^5.9.6"
aiofiles = "^23.2.1"
uvloop = {version="0.19.0", platform="linux"}
hikari-miru = "~=4.1.1"
levenshtein = "^0.25.1"
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
